TF/TF/network.tf
resource "aws_internet_gateway" "prod-igw" {
    vpc_id = "${aws_vpc.prod-vpc.id}"
    tags = {
        Name = "prod-igw"
    }
}

resource "aws_route_table" "prod-public-crt" {
    vpc_id = "${aws_vpc.prod-vpc.id}"

    route {
        //associated subnet can reach everywhere
        cidr_block = "0.0.0.0/0"
        //CRT uses this IGW to reach internet
        gateway_id = "${aws_internet_gateway.prod-igw.id}"
    }

    tags = {
        Name = "prod-public-crt"
    }
}

resource "aws_route_table_association" "prod-crta-public-subnet-1"{
    subnet_id = "${aws_subnet.prod-subnet-a-1.id}"
    route_table_id = "${aws_route_table.prod-public-crt.id}"
}


resource "aws_route_table_association" "prod-crta-public-subnet-2"{
    subnet_id = "${aws_subnet.prod-subnet-b-1.id}"
    route_table_id = "${aws_route_table.prod-public-crt.id}"
}



resource "aws_route_table_association" "prod-crta-public-subnet-3"{
    subnet_id = "${aws_subnet.prod-subnet-c-1.id}"
    route_table_id = "${aws_route_table.prod-public-crt.id}"
}
